@@ -2,8 +2,8 @@ Package: Rchoice
 Type: Package
 Title: Discrete Choice (Binary, Poisson and Ordered) Models with Random
         Parameters
-Version: 0.3-5
-Date: 2022-04-20
+Version: 0.3-6
+Date: 2023-03-10
 Authors@R: c(person("Mauricio", "Sarrias", role = c("aut", "cre"), email = "msarrias86@gmail.com", comment = c(ORCID = "0000-0001-5932-4817")), person("Yves", "Croissant", role = "ctb"), person("Achim", "Zeileis", role = "ctb")) 
 Description: An implementation of simulated maximum likelihood method for the estimation of Binary (Probit and Logit), Ordered (Probit and Logit) and Poisson models with random parameters for cross-sectional and longitudinal data as presented in Sarrias (2016) <doi:10.18637/jss.v074.i10>.
 Depends: R (>= 4.0), Formula, maxLik
@@ -14,13 +14,13 @@ License: GPL (>= 2)
 URL: https://github.com/mauricio1986/Rchoice
 BugReports: https://github.com/mauricio1986/Rchoice/issues
 LazyData: no
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.3
 Encoding: UTF-8
 NeedsCompilation: no
-Packaged: 2022-04-20 22:03:19 UTC; mauriciosarrias
+Packaged: 2023-03-10 11:44:56 UTC; mauriciosarrias
 Author: Mauricio Sarrias [aut, cre] (<https://orcid.org/0000-0001-5932-4817>),
   Yves Croissant [ctb],
   Achim Zeileis [ctb]
 Maintainer: Mauricio Sarrias <msarrias86@gmail.com>
 Repository: CRAN
-Date/Publication: 2022-04-20 22:22:31 UTC
+Date/Publication: 2023-03-10 12:30:06 UTC
